<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">
    <!--头像、用户名、操作时间  -->
 	<LinearLayout 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
	     <ImageView
	         android:contentDescription="头像"
	         android:id="@+id/personalPic"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         />
	     <LinearLayout
	         android:orientation="vertical"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content">
	         <TextView
	            android:textSize="10pt"
	            android:textStyle="italic"
	            android:textColor="@android:color/darker_gray"
	            android:id="@+id/username"
	            android:layout_width="wrap_content"
	         	android:layout_height="wrap_content"/>
	         <TextView
	            android:id="@+id/doTime"
	            android:textColor="#d5d5dd"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"/>
	     </LinearLayout>
     </LinearLayout>
     <!-- 用户描述 -->
     <TextView
         android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
         />
     <!--内容概括  -->
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
	     <TextView
	         android:id="@+id/content"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"/>
	     <GridView 
	         android:id="@+id/main_gridView"
	         android:gravity="center"
	         android:horizontalSpacing="1pt"
	         android:verticalSpacing="1pt"
	         android:numColumns="4"
	         android:background="@android:color/darker_gray"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
     <!--分享、评论、收藏  -->
     <LinearLayout 
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical">
         <Button
             android:id="@+id/shareButton"
             android:text="@string/share1" 
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/commontButton" 
             android:text="@string/commont1" 
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/collectButton"
             android:text="@string/collect1" 
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"/>
     </LinearLayout>
</LinearLayout>